--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 django = "^4.1.7"
+pre-commit = "^3.0.4"
 
 
 [tool.poetry.group.dev.dependencies]
