feat: add env variables for postgresql

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.10"
 django = "^4.1.7"
 pre-commit = "^3.0.4"
+python-dotenv = "^0.21.1"
 
 
 [tool.poetry.group.dev.dependencies]
