--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pre-commit = "^3.0.4"
 python-dotenv = "^0.21.1"
 psycopg2-binary = "^2.9.5"
 django-extensions = "^3.2.1"
+djangorestframework = "^3.14.0"
 
 
 [tool.poetry.group.dev.dependencies]
