--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python-dotenv = "^0.21.1"
 psycopg2-binary = "^2.9.5"
 django-extensions = "^3.2.1"
 djangorestframework = "^3.14.0"
+pytest-django = "^4.5.2"
 
 
 [tool.poetry.group.dev.dependencies]
