--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ psycopg2-binary = "^2.9.5"
 django-extensions = "^3.2.1"
 djangorestframework = "^3.14.0"
 pytest-django = "^4.5.2"
+channels = "^4.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
