--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ django-extensions = "^3.2.1"
 djangorestframework = "^3.14.0"
 pytest-django = "^4.5.2"
 channels = "^4.0.0"
+channels-redis = "^4.0.0"
+django-cors-headers = "^3.13.0"
+daphne = "^4.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
