--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ pytest-django = "^4.5.2"
 channels = "^4.0.0"
 channels-redis = "^4.0.0"
 django-cors-headers = "^3.13.0"
-daphne = "^4.0.0"
+uvicorn = "^0.20.0"
+websockets = "^10.4"
 
 
 [tool.poetry.group.dev.dependencies]
