feat: Add nginx service and change static file location
This commit adds a new nginx service to the docker-compose file and changes the location of the static files volume to /usr/src/app/static_files. The nginx service is added to allow serving static files with better performance, and the change in volume location is necessary for nginx to be able to serve the static files. Also, the urls.py file is updated to use the serve() function to serve the static files.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,8 @@ services:
       .env.docker
     ports:
       - 80:80
+    volumes:
+      - staticdata:/usr/src/app/static_files
     depends_on:
       db:
         condition: service_healthy
@@ -33,7 +35,14 @@ services:
     volumes:
       - redis_data:/data
 
+  nginx:
+    image: nginx:latest
+    ports:
+      - "3000:3000"
+    depends_on:
+      - web
 
 volumes:
   postgres_data:
   redis_data:
+  staticdata:
