fix: add volume for logs in ci

--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -19,11 +19,15 @@ services:
       *common-variables
     ports:
       - 80:80
+    volumes:
+      - logs:/code/logs
+      - staticdata:/usr/src/app/static_files
     depends_on:
       db:
         condition: service_healthy
       redis_db:
         condition: service_started
+
 
   db:
     image: postgres:latest
@@ -44,7 +48,15 @@ services:
     volumes:
       - redis_data:/data
 
+  nginx:
+    image: nginx:latest
+    ports:
+      - "3000:3000"
+    depends_on:
+      - web
 
 volumes:
   postgres_data:
   redis_data:
+  staticdata:
+  logs:
