--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -31,7 +31,7 @@ jobs:
       SECRET_KEY: ${{ secrets.SECRET_KEY }}
       ALLOWED_HOSTS: ${{ secrets.ALLOWED_HOSTS }}
       REDIS_HOST: ${{ secrets.REDIS_HOST }}
-      DEBUG: "why?"
+      DEBUG: true
     steps:
       - name: clone code
         uses: actions/checkout@v2
