fix: DEBUG variable

--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -8,7 +8,7 @@ x-common-variables: &common-variables
   DB_PORT: $DB_PORT
   SECRET_KEY: $SECRET_KEY
   REDIS_HOST: $REDIS_HOST
-  DEBUG: true
+  DEBUG: 'true'
   ALLOWED_HOSTS: $ALLOWED_HOSTS
 
 
